fix form headings spacing

--- a/medstar-01/assets/css/custom.css
+++ b/medstar-01/assets/css/custom.css
@@ -1,7 +1,8 @@
 @media (min-width: 1200px) {
     .contact_us.service-contact-sidebar .contact-form-title {
         font-size: 54px;
-        margin-top: 0 !important;
+        margin-top: 15px !important;
+        margin-bottom: 10px !important;
     }
 }
 
